// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass correct values to pymControl 1`] = `
Object {
  "id": "container-id",
  "title": "StreamEmbed",
  "url": "http://localhost/stream.html?assetID=asset-id&assetURL=asset-url&commentID=comment-id",
}
`;

exports[`should pass default values to pymControl 1`] = `
Object {
  "id": "container-id",
  "title": "StreamEmbed",
  "url": "http://localhost/stream.html",
}
`;
